--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
+### Project-related
+# local-trained model
+local-model*
+App*.log
+
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
